[tool.poetry]
name = "LLMbaseAIagent"
version = "0.1.1"
description = ""
authors = ["Kuchiki <ykuchiki0827@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
replicate = "^0.25.2"
groq = "^0.5.0"
torch = "^2.3.0"
transformers = "^4.40.2"
accelerate = "^0.30.1"
bitsandbytes = "^0.42.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"

[[tool.poetry.packages]]
include = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

